<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:text="@string/name"
        android:textSize="70sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/text_info"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/made_by"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/menu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/menu"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/game"
        app:layout_constraintBottom_toTopOf="@+id/text_throws"
        app:layout_constraintEnd_toStartOf="@+id/info_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_info" >

        <AutoCompleteTextView
            android:id="@+id/drop_down_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/low"
            android:inputType="none"
            tools:ignore="LabelFor" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/info_button"
        android:layout_width="50dp"
        android:layout_height="60dp"
        android:backgroundTint="@color/blue"
        android:text="@string/info"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/text_throws"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/menu"
        app:layout_constraintTop_toBottomOf="@+id/text_info" />

    <TextView
        android:id="@+id/text_throws"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/throws_left"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/menu" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_throws">

        <ImageView
            android:id="@+id/image1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/dice"
            android:padding="10dp"
            app:srcCompat="@drawable/grey1" />

        <ImageView
            android:id="@+id/image2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/dice"
            android:padding="10dp"
            app:srcCompat="@drawable/grey2" />

        <ImageView
            android:id="@+id/image3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/dice"
            android:padding="10dp"
            app:srcCompat="@drawable/grey3" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/text_stats"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <ImageView
            android:id="@+id/image4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            app:srcCompat="@drawable/grey4"
            android:contentDescription="@string/dice" />

        <ImageView
            android:id="@+id/image5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            app:srcCompat="@drawable/grey5"
            android:contentDescription="@string/dice" />

        <ImageView
            android:id="@+id/image6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            app:srcCompat="@drawable/grey6"
            android:contentDescription="@string/dice" />

    </LinearLayout>

    <TextView
        android:id="@+id/text_stats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stat"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/throw_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

    <Button
        android:id="@+id/throw_button"
        android:layout_width="250dp"
        android:layout_height="70dp"
        android:backgroundTint="@color/blue"
        android:text="@string/throw_button"
        android:textSize="20sp"
        android:textStyle="bold"
        app:cornerRadius="15dp"
        app:layout_constraintBottom_toTopOf="@+id/pair_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_stats" />

    <Button
        android:id="@+id/pair_button"
        android:layout_width="150dp"
        android:layout_height="70dp"
        android:backgroundTint="@color/grey"
        android:text="@string/pair_button"
        android:textSize="20sp"
        android:textStyle="bold"
        app:cornerRadius="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/throw_button" />

</androidx.constraintlayout.widget.ConstraintLayout>