<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="70sp"
        android:textStyle="bold"
        android:text="@string/result"
        app:layout_constraintBottom_toTopOf="@+id/table"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TableLayout
        android:id="@+id/table"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintBottom_toTopOf="@id/play_again_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <TableRow
            android:background="@color/blue"
            android:padding="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/game_result"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_weight="4"
                android:gravity="center_horizontal"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/score_result"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_weight="4"
                android:gravity="center_horizontal" />

        </TableRow>

        <TableRow
            android:background="@color/white"
            android:padding="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/result_Low"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold"
                android:layout_weight="4"
                android:gravity="center_horizontal"/>

            <TextView
                android:id="@+id/score_low"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zero"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold"
                android:layout_weight="4"
                android:gravity="center_horizontal"/>

        </TableRow>

        <TableRow
            android:background="@color/blue"
            android:padding="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/result_4"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="bold"
                android:layout_weight="4"
                android:gravity="center_horizontal"/>

            <TextView
                android:id="@+id/score_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zero"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="bold"
                android:layout_weight="4"
                android:gravity="center_horizontal"/>

        </TableRow>

        <TableRow
            android:background="@color/white"
            android:padding="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/result_5"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold"
                android:layout_weight="4"
                android:gravity="center_horizontal"/>

            <TextView
                android:id="@+id/score_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zero"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold"
                android:layout_weight="4"
                android:gravity="center_horizontal"/>

        </TableRow>

        <TableRow
            android:background="@color/blue"
            android:padding="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/result_6"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="bold"
                android:layout_weight="4"
                android:gravity="center_horizontal"/>

            <TextView
                android:id="@+id/score_6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zero"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="bold"
                android:layout_weight="4"
                android:gravity="center_horizontal"/>

        </TableRow>

        <TableRow
            android:background="@color/white"
            android:padding="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/result_7"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold"
                android:layout_weight="4"
                android:gravity="center_horizontal"/>

            <TextView
                android:id="@+id/score_7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zero"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold"
                android:layout_weight="4"
                android:gravity="center_horizontal"/>

        </TableRow>

        <TableRow
            android:background="@color/blue"
            android:padding="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/result_8"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="bold"
                android:layout_weight="4"
                android:gravity="center_horizontal"/>

            <TextView
                android:id="@+id/score_8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zero"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="bold"
                android:layout_weight="4"
                android:gravity="center_horizontal"/>

        </TableRow>

        <TableRow
            android:background="@color/white"
            android:padding="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/result_9"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="14sp"
                android:layout_weight="4"
                android:gravity="center_horizontal"/>

            <TextView
                android:id="@+id/score_9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zero"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold"
                android:layout_weight="4"
                android:gravity="center_horizontal"/>

        </TableRow>

        <TableRow
            android:background="@color/blue"
            android:padding="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/result_10"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="bold"
                android:layout_weight="4"
                android:gravity="center_horizontal"/>

            <TextView
                android:id="@+id/score_10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zero"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="bold"
                android:layout_weight="4"
                android:gravity="center_horizontal"/>

        </TableRow>

        <TableRow
            android:background="@color/white"
            android:padding="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/result_11"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold"
                android:layout_weight="4"
                android:gravity="center_horizontal"/>

            <TextView
                android:id="@+id/score_11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zero"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold"
                android:layout_weight="4"
                android:gravity="center_horizontal"/>

        </TableRow>

        <TableRow
            android:background="@color/blue"
            android:padding="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/result_12"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="bold"
                android:layout_weight="4"
                android:gravity="center_horizontal"/>

            <TextView
                android:id="@+id/score_12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zero"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="bold"
                android:layout_weight="4"
                android:gravity="center_horizontal"/>

        </TableRow>

        <TableRow
            android:background="@color/white"
            android:padding="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/result_total"
                android:textColor="@color/black"
                android:textSize="34sp"
                android:textStyle="bold"
                android:layout_weight="4"
                android:gravity="center_horizontal"/>

            <TextView
                android:id="@+id/score_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zero"
                android:textColor="@color/black"
                android:textSize="34sp"
                android:textStyle="bold"
                android:layout_weight="4"
                android:gravity="center_horizontal"/>

        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/play_again_button"
        android:layout_width="250dp"
        android:layout_height="70dp"
        android:text="@string/play_again"
        android:textStyle="bold"
        android:textSize="20sp"
        android:backgroundTint="@color/blue"
        android:layout_gravity="center"
        app:cornerRadius="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/table"/>

</androidx.constraintlayout.widget.ConstraintLayout>